tests/flow/parse_error_node/__snapshots__/jsfmt.spec.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Client.js - flow-verify 1`] = `
/**
 * Client imports some but not all modules,
 * triggering/suppressing parse errors.
 * @flow
 */

// non-flow files should not give parse errors
var A = require("./Imported");          // non-Flow file @providesModule Foo

var B = require("./ParseError");        // Flow file
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * Client imports some but not all modules,
 * triggering/suppressing parse errors.
 * @flow
 */

// non-flow files should not give parse errors
var A = require("./Imported"); // non-Flow file @providesModule Foo

var B = require("./ParseError"); // Flow file

`;
